--- a/app/src/main/res/layout/connexion.xml
+++ b/app/src/main/res/layout/connexion.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -49,18 +48,21 @@
                     android:textSize="20sp" />
             </LinearLayout>
 
+            <!-- Email EditText -->
             <EditText
+                android:id="@+id/emailEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
+                android:layout_height="48dp"
+            android:hint="Email"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            android:background="" />
 
-                android:padding="10dp"
-                android:background="" />
-
+            <!-- Password EditText -->
             <EditText
+                android:id="@+id/passwordEditText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="48dp"
                 android:hint="Mot de passe"
                 android:inputType="textPassword"
                 android:padding="10dp"
@@ -74,9 +76,11 @@
                 android:gravity="end"
                 android:paddingTop="10dp" />
 
+            <!-- Login Button -->
             <Button
+                android:id="@+id/signInButton"
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="48dp"
                 android:text="Se Connecter"
                 android:backgroundTint="#4491f9"
                 android:textColor="#FFFFFF"
