--- a/app/src/main/res/drawable/pharmacy_item.xml
+++ b/app/src/main/res/drawable/pharmacy_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/pharmacyImage"
             android:layout_width="90dp"
             android:layout_height="match_parent"
-            android:src="@drawable/pharmacy_image_placeholder"
+            android:src="@drawable/mac"
             android:scaleType="centerCrop"
             android:layout_gravity="center"/>
 
