--- a/app/src/main/res/layout/acceuil.xml
+++ b/app/src/main/res/layout/acceuil.xml
@@ -59,6 +59,7 @@ android:layout_height="match_parent">
                 android:layout_marginEnd="16dp" />
 
             <ImageView
+                android:id="@+id/notificationImageView"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/notification" />
@@ -92,9 +93,10 @@ android:layout_height="match_parent">
                 android:textSize="14sp" />
 
             <Button
+
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Vue Carte"
+                android:text="Add article"
                 android:backgroundTint="#0099E5"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold" />
@@ -112,12 +114,13 @@ android:layout_height="match_parent">
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="300dp"
-                    android:layout_height="150dp"
-                    android:src="@drawable/test"
-                    android:scaleType="centerCrop"
-                    android:layout_marginEnd="8dp"
-                    android:background="@drawable/card_background" />
+                    android:id="@+id/xrrrrrrImageView"
+                android:layout_width="300dp"
+                android:layout_height="150dp"
+                android:src="@drawable/test"
+                android:scaleType="centerCrop"
+                android:layout_marginEnd="8dp"
+                android:background="@drawable/card_background" />
 
                 <ImageView
                     android:layout_width="300dp"
@@ -160,6 +163,7 @@ android:layout_height="match_parent">
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/medicamentLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -175,9 +179,10 @@ android:layout_height="match_parent">
                     />
 
                 <TextView
+                    android:id="@+id/med"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Pharmacie"
+                    android:text="Medicament"
                     android:textSize="14sp"
                     android:layout_marginTop="8dp"
                     android:textColor="#333333" />
