--- a/app/src/main/res/layout/pageacce.xml
+++ b/app/src/main/res/layout/pageacce.xml
@@ -1,6 +1,3 @@
-
-
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,7 +6,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#FFFFFF"
-        android:padding="16dp">
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,6 +56,7 @@
                     android:layout_marginEnd="16dp" />
 
                 <ImageView
+                    android:id="@+id/notificationImageView"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/notification" />
@@ -92,9 +90,10 @@
                     android:textSize="14sp" />
 
                 <Button
+                    android:id="@+id/btn_add_article"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:text="Vue Carte"
+                    android:text="Article"
                     android:backgroundTint="#0099E5"
                     android:textColor="#FFFFFF"
                     android:textStyle="bold" />
@@ -112,14 +111,15 @@
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/xrrrrrrImageView"
                         android:layout_width="300dp"
                         android:layout_height="150dp"
                         android:src="@drawable/test"
                         android:scaleType="centerCrop"
                         android:layout_marginEnd="8dp"
                         android:background="@drawable/card_background" />
-
                     <ImageView
+                        android:id="@+id/calculatorImageView"
                         android:layout_width="300dp"
                         android:layout_height="150dp"
                         android:src="@drawable/test"
@@ -135,11 +135,11 @@
                 android:layout_marginBottom="16dp">
 
                 <LinearLayout
+                    android:id="@+id/doctorLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:gravity="center"
-
                     android:layout_marginRight="10dp"
                     android:padding="10dp"
                     android:background="@drawable/card_background">
@@ -160,6 +160,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/medicamentLayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
@@ -175,9 +176,10 @@
                         />
 
                     <TextView
+                        android:id="@+id/med"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pharmacie"
+                        android:text="Medicament"
                         android:textSize="14sp"
                         android:layout_marginTop="8dp"
                         android:textColor="#333333" />
@@ -214,8 +216,6 @@
                     android:orientation="vertical"
                     android:padding="16dp">
 
-
-
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -225,6 +225,7 @@
                         android:textSize="14sp" />
                 </LinearLayout>
             </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -276,6 +277,7 @@
                             android:textColor="#777777" />
                     </LinearLayout>
                 </LinearLayout>
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -286,14 +288,13 @@
                     android:maxLines="1"
                     android:ellipsize="end"
                     android:layout_marginBottom="8dp" />
+
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:src="@drawable/l2"
                     android:scaleType="centerCrop"
                     android:layout_marginBottom="8dp"/>
-
-
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -330,13 +331,13 @@
                         android:layout_height="wrap_content"
                         android:text="5 Commentaires"
                         android:textSize="14sp"
-
                         android:textColor="#333333"
                         android:layout_gravity="center_vertical" />
                 </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
+
     </ScrollView>
 
 </FrameLayout>
